dnl Gcanal is Linux build system to customize target OS.
dnl Copyright (C) skuicloud@gmail.com
dnl 
dnl This program is free software; you can redistribute it and/or
dnl modify it under the terms of the GNU General Public License
dnl as published by the Free Software Foundation; either version 2
dnl of the License, or (at your option) any later version.
dnl 
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl 
dnl You should have received a copy of the GNU General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 
dnl 02110-1301, USA.

dnl Authors
dnl Kui Shi  skuicloud@gmail.com  01/08/2013

dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.59)
AC_INIT(Gcanal, 0.1, skuicloud@gmail.com)

AC_COPYRIGHT([GPLv2 skuicloud@gmail.com])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE

if test `pwd` = `cd $srcdir; pwd`; then 
  AC_MSG_ERROR([You must use a build directory separate from $srcdir.])
fi

TOP_SRC_DIR=`cd $srcdir; pwd`
AC_SUBST([TOP_SRC_DIR])
TOP_TEMPLATE_DIR=`cd $srcdir/template; pwd`
AC_SUBST([TOP_TEMPLATE_DIR])
TOP_BUILD_DIR=`readlink -f $PWD`
AC_SUBST([TOP_BUILD_DIR])

die() {
    AC_MSG_ERROR([
    ** FATAL ERROR:
    ** $1
    ])
}

AC_CONFIG_FILES([Makefile
         build-x86_64/Makefile
         release/Makefile])


dnl Checks for programs.

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT()

